DBZ-6996 Updating system tests to properly use MongoDB in a container